Agregando Servicios de Acceso a Calendario

--- a/TareasAPP/TareasAPP/TareasAPP/App.xaml
+++ b/TareasAPP/TareasAPP/TareasAPP/App.xaml
@@ -6,6 +6,16 @@
   <Application.Resources>
 
     <!-- Application resource dictionary -->
+        <ResourceDictionary>
+            <Style x:Key="btnStyle" TargetType="Button">
+                <Setter Property="CornerRadius" Value="10"/>
+                <Setter Property="BorderColor" Value="#FF8614"/>
+                <Setter Property="BackgroundColor" Value="#FF5C21"/>
+                <Setter Property="TextColor" Value="White"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="FontSize" Value="Medium"/>
+            </Style>
+        </ResourceDictionary>
 
   </Application.Resources>
 </prism:PrismApplication>
