--- a/TareasAPP/TareasAPP/TareasAPP/Views/MainPage.xaml
+++ b/TareasAPP/TareasAPP/TareasAPP/Views/MainPage.xaml
@@ -7,7 +7,8 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Agregar"
                      Order="Primary"                    
-                     Command="{Binding btnAgregar}"/>
+                     Command="{Binding btnAgregar}"
+                     IconImageSource="add.png"/>
     </ContentPage.ToolbarItems>
     <ScrollView>
         <StackLayout>
