--- a/TareasAPP/TareasAPP/TareasAPP/Views/NuevaTarea.xaml
+++ b/TareasAPP/TareasAPP/TareasAPP/Views/NuevaTarea.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"             
              mc:Ignorable="d"
              x:Class="TareasAPP.Views.NuevaTarea"
              Title="Agregar Tarea"
@@ -10,26 +10,42 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Cancelar"
                      Order="Primary"
-                     Command="{Binding btnCancelar}"></ToolbarItem>
+                     Command="{Binding btnCancelar}"
+                     IconImageSource="cancel.png"></ToolbarItem>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout Padding="20">
-            <Label Text="Título de Tarea:"
+            <Label Text="Título de Tarea: (*)"
                    FontAttributes="Bold" 
                    FontSize="Medium"/>
             <Entry Placeholder="Digíte el título de la tarea" 
-                   Text="{Binding TituloTarea}"/>
+                   Text="{Binding TituloTarea}"    
+                   x:Name="txtTitulo"
+                   MaxLength="60"/>
             <Label Text="Descripción:"
                    FontAttributes="Bold" 
                    FontSize="Medium"/>
             <Editor Text="{Binding DescripcionTarea}"
-                    VerticalOptions="FillAndExpand"/>
+                    VerticalOptions="FillAndExpand"
+                    MaxLength="150"/>
+
             <Label Text="Fecha:"
                    FontAttributes="Bold" 
                    FontSize="Medium"/>
             <DatePicker Date="{Binding FechaTarea}" 
                         MinimumDate="{Binding FechaTarea}"/>
-            <Button Text="Agregar Tarea" Command="{Binding btnGuardar}"/>
+            <Button Text="Agregar Tarea" 
+                    Command="{Binding btnGuardar}"
+                    Style="{StaticResource btnStyle}">
+                <Button.Triggers>
+                    <DataTrigger TargetType="Button"
+                        Binding="{Binding Source={x:Reference txtTitulo},
+                                           Path=Text.Length}"
+                                            Value="0">
+                        <Setter Property="TextColor" Value="Black" />
+                    </DataTrigger>
+                </Button.Triggers>
+            </Button>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
